Implement alarm management system in Rooster.
- Add models for Alarm, AlarmEntity, EditAlarm, RoosterGetRequest, RoosterGetResponse, RoosterPostRequest, and RoosterPostResponse.
- Introduce AlarmDbService with CRUD operations for alarms.
- Configure migration to create the Alarms table in the database.
- Implement mappers for Alarm and EditAlarm transformations.
- Update Program.cs to include AlarmDbService and migration setup.

--- a/Rooster.Contract/Rooster.Contract.csproj
+++ b/Rooster.Contract/Rooster.Contract.csproj
@@ -4,4 +4,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Nestor\Nestor.Db\Nestor.Db.csproj" />
+    <ProjectReference
+      Include="..\..\Nestor\Nestor.SourceGenerator\Nestor.SourceGenerator.csproj"
+      ReferenceOutputAssembly="false"
+      OutputItemType="Analyzer"
+    />
+  </ItemGroup>
 </Project>
