--- a/Rooster/Rooster.csproj
+++ b/Rooster/Rooster.csproj
@@ -8,4 +8,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Zeus\Zeus\Zeus.csproj" />
+    <ProjectReference Include="..\Rooster.Contract\Rooster.Contract.csproj" />
+  </ItemGroup>
 </Project>
