Refactor AlarmService structure: - Moved `AlarmDbService` to `Rooster.Db` project. - Introduced `Rooster.Db` project and updated solution/project references. - Adjusted attributes and namespaces for new structure.

--- a/Rooster/Rooster.csproj
+++ b/Rooster/Rooster.csproj
@@ -11,6 +11,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Zeus\Zeus\Zeus.csproj" />
-    <ProjectReference Include="..\Rooster.Contract\Rooster.Contract.csproj" />
+    <ProjectReference Include="..\Rooster.Db\Rooster.Db.csproj" />
   </ItemGroup>
 </Project>
